# Hippy

./: build-profile.json5  build.gradle  gradle.properties
framework/examples/windows-demo/: CMakeLists.txt  build.bat
framework/examples/windows-demo/include/: demo_window.h  main_window.h
framework/examples/windows-demo/src/: demo_window.cc  main.cc  main_window.cc
framework/windows/: CMakeLists.txt
framework/windows/include/: config.h  context.h  engine.h  framework.h
framework/windows/include/adaptor/console/: console.h  event_viewer_console.h
framework/windows/include/adaptor/exception/: debug_exception.h  exception.h
framework/windows/include/adaptor/netinfo/: adapter_addresses_net_info.h  net_info.h
framework/windows/include/adaptor/network/: http_cookie.h  http_network.h  network.h
framework/windows/include/adaptor/storage/: sqlite_storage.h  storage.h
framework/windows/include/driver/: driver.h  module_dispatcher.h
framework/windows/include/modules/clipboard/: clipboard.h
framework/windows/include/modules/exception/: exception.h
framework/windows/include/modules/imageloader/: image_loader.h
framework/windows/include/modules/netinfo/: net_info.h
framework/windows/include/modules/network/: network.h  websocket.h  websocket_client.h  websocket_listener.h
framework/windows/include/modules/storage/: storage.h  storage_response.h
framework/windows/include/vfs/: vfs_manager.h
framework/windows/src/: config.cc  context.cc  engine.cc  framework.cc
framework/windows/src/adaptor/console/: console.cc  event_viewer_console.cc
framework/windows/src/adaptor/exception/: debug_exception.cc
framework/windows/src/adaptor/netinfo/: adapter_addresses_net_info.cc
framework/windows/src/adaptor/network/: http_cookie.cc  http_network.cc
framework/windows/src/adaptor/storage/: sqlite_storage.cc
framework/windows/src/driver/: driver.cc  module_dispatcher.cc
framework/windows/src/modules/clipboard/: clipboard.cc
framework/windows/src/modules/exception/: exception.cc
framework/windows/src/modules/imageloader/: image_loader.cc
framework/windows/src/modules/netinfo/: net_info.cc
framework/windows/src/modules/network/: network.cc  websocket.cc  websocket_client.cc  websocket_listener.cc
framework/windows/src/modules/storage/: storage.cc  storage_response.cc
framework/windows/src/vfs/: vfs_manager.cc
modules/vfs/native/: CMakeLists.txt
modules/vfs/native/include/vfs/: file.h  request_job.h  uri_loader.h
modules/vfs/native/src/: uri_loader.cc
modules/windows/curl/: CMakeLists.txt
modules/windows/curl/include/curl/: curl_wrapper.h
modules/windows/curl/src/: curl_wrapper.cc
tdf/: CMakeLists.txt
tdf/include/core/: precompile.h
tdf/include/core/common/: base64.h  binary_archive.h  bitmap.h  blend_mode.h  callback_notifier.h  color.h  constants.h  copyable_function.h  data.h  data_stream.h  defer.h  diagnosticable.h  diagnostics_reflection.h  file_utility.h  id_generator.h  image.h  image_frame.h  image_info.h  impl_getter.h  listener.h  log_settings.h  logging.h  lru_cache.h  m33.h  m44.h  macro.h  memory.h  object.h  point.h  point3.h  property.h  rect.h  refl.hpp  reflection.h  rrect.h  scalar.h  serialization.h  size.h  span.h  spsc_queue.h  (+8 more)
tdf/include/core/engine/graphics/: board.h  canvas.h  color_filter.h  device.h  graphics_context.h  image_filter.h  mask_filter.h  nway_canvas.h  paint.h  path.h  path_effect.h  picture.h  picture_recorder.h  save_layer_rec.h  shader.h  surface.h  texture.h
tdf/include/core/engine/hittest/: hit_test.h
tdf/include/core/engine/raster/: compositor_context.h  debug_info.h  layer_tree.h  layer_tree_builder.h  matrix_decomposition.h  paint_utils.h  painting_context.h  raster_cache.h  rasterizer.h  snapshot_delegate.h
tdf/include/core/engine/render/: border_object.h  box_border.h  box_shadow.h  clip_object.h  clip_oval_object.h  clip_path_object.h  clip_rect_object.h  clip_round_rect.h  color_filter_object.h  color_object.h  custom_paint_object.h  custom_painter.h  debug_info.h  editable_object.h  embedded_object.h  follower_object.h  fractional_translation_object.h  gradient.h  ignore_pointer_object.h  image_object.h  inspector_overlay.h  leader_object.h  offstage_object.h  opacity_object.h  render_context.h  render_input_decorator.h  render_object.h  render_property.h  render_tree.h  repaint_boundary_object.h  shadow_object.h  text_object.h  transform_object.h  viewport_object.h
tdf/include/core/engine/schedule/: pipeline_metric.h  render_pipeline.h  scheduler.h  signal_task_driver.h  task_driver.h  task_driver_run_loop.h  task_runner.h  task_runner_checker.h  task_runner_names.h  thread_task_driver.h
tdf/include/core/platform/android/: file_manager_android.h  platform_android.h  runloop_task_driver_android.h  tdf_engine_android.h
tdf/include/core/platform/common/: clipboard.h  embedded_view_holder.h  embedded_view_manager.h  file_manager.h  file_picker.h  platform.h  platform_window.h  system_mouse_cursor.h  tdf_engine.h  (+4 more)
tdf/include/core/tdfi/: event.h  event_center.h  shell.h  shell_config.h  shortcut_manager.h  timer.h
tdf/include/tdfcodec/: image_codec.h  image_decoder.h  image_encoder.h
tdf/include/tdfui/image/: asset_image_loader.h  file_image_loader.h  image_data.h  image_data_cache.h  image_data_cache_default.h  image_decode_manager.h  image_decoder_factory.h  image_load_manager.h  image_loader.h  image_manager.h  image_options.h  image_player.h  image_processor.h  image_raster_manager.h  image_task.h  image_utility.h
tdf/include/tdfui/view/: button.h  clipboard_status_notifier.h  custom_layout_view.h  custom_paint_view.h  drr_view.h  edge_insets.h  embedded_view.h  follower_view.h  image_view.h  label.h  leader_view.h  linear_custom_layout.h  mouse_listener.h  navigation_bar.h  navigator.h  navigator_transition.h  pencil_canvas_view.h  recycler.h  refresh_header.h  render_object_view.h  scaffold.h  scroll_bar.h  scroll_view.h  scroll_view_header.h  segmented_view.h  slider.h  switch.h  tab_bar.h  transition_context.h  view.h  view_context.h  waterfall_custom_layout.h
(+594 files in other folders)
